create offer view

--- a/client/index.html
+++ b/client/index.html
@@ -75,6 +75,8 @@
       <script src="app/app.constant.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/offer/create/create.controller.js"></script>
+      <script src="app/offer/create/create.js"></script>
       <script src="app/offer/offer.controller.js"></script>
       <script src="app/offer/offer.js"></script>
       <script src="app/offer/offer.service.js"></script>
