offer create view and picture upload implemented

--- a/client/app/offer/offer.html
+++ b/client/app/offer/offer.html
@@ -1,4 +1,5 @@
 <div ng-repeat="offer in $ctrl.offers">
+  <img src="{{offer.picture}}" alt="..." class="img-thumbnail">
   <h1>{{offer.name}}</h1>
   <p>{{offer.description}}</p>
 </div>
