--- a/client/app/offer/create/create.html
+++ b/client/app/offer/create/create.html
@@ -1,4 +1,12 @@
-<form class="form-horizontal">
+<form class="form-horizontal" enctype="multipart/form-data" name="form">
+  
+  
+  <div class="button" ngf-select ng-model="$ctrl.file" name="photo" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100"  ngf-resize="{width: 420, height: 420}" capture="camera">Select</div>
+  Image thumbnail: <img ngf-thumbnail="$ctrl.file">
+  
+  
+  
+  
   <div class="form-group">
     <label class="col-sm-2 control-label">Titel</label>
     <div class="col-sm-10">
@@ -31,7 +39,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="button" class="btn btn-success" ng-click="$ctrl.offer.$save();">Angebot aufschalten</button>
+      <button type="button" class="btn btn-success" ng-click="$ctrl.submit()">Angebot aufschalten</button>
     </div>
   </div>
 </form>
