--- a/client/app/createOffering/createOffering.html
+++ b/client/app/createOffering/createOffering.html
@@ -1,1 +1,22 @@
-<div>This is the createOffering view.</div>
+<div class= "container">
+    <form>
+        <div class="form-group">
+            <img id="imgPreview" src="#" alt="uploadetImage" class="img-thumbnail img-responsive "/>
+            <input type="file" name="input_camera" id="input_camera" accept="image/*" capture="camera" >
+        </div>
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text" class="form-control" id="title" placeholder="Title">
+            </div>
+            <div class="form-group">
+                <label for="description">Description</label>
+                <textarea class="form-control" rows="3"></textarea> 
+            </div>
+            <div class="form-group">
+                <label for="offeringPrice">Price</label>
+                <input type="number" class="form-control" id="offeringPrice" step="0.05" placeholder="0.00">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+</div>
+
