--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,18 +1,18 @@
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
-  </div>
-</header>
+<div class ="container" id ="map">
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in $ctrl.awesomeThings">
-        <li><a href="#" uib-tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
-    </div>
-  </div>
 </div>
+
+<div class ="container" id ="offerList"> 
+</div>
+<div class = 'cameraButton'>
+    <div class="container" id= "capture">
+        <div class = 'image-upload'>
+            <input type="file" name="input_camera" id="input_camera" accept="image/*" capture=amera" ng-model="input_camera"> 
+        </div>
+        <button id="btn-camera-upload" type="button" class="btn btn-inverse btn-lg" >
+            <span class="glyphicon glyphicon-camera"></span>
+            Create an offer
+        </button>   
+    </div>
+</div>
+
