--- a/client/app/createOffering/createOffering.html
+++ b/client/app/createOffering/createOffering.html
@@ -1,11 +1,12 @@
 <div class= "container">
-        <div class="container">
+    <!--<div class="container">-->
             <img id="imgPreview" alt="uploadetImage" class="thumbnail" ngf-thumbnail="$ctrl.file"/>
-        </div>
+            <!--</div>-->
+        <!--<div class="container">-->
         <form>
             <div class="form-group">
                 <label for="title">Title</label>
-                <input type="text" class="form-control" id="title" placeholder="Title"ng-model="$ctrl.offer.name">
+                <input type="text" class="form-control" id="title" placeholder="Title" ng-model="$ctrl.offer.name">
             </div>
             <div class="form-group">
                 <label for="description">Description</label>
@@ -25,6 +26,13 @@
             </div>
             <button type="submit" class="btn btn-default" ng-click="$ctrl.submit()">Angebot erstellen</button>
             <button type="reset"  class="btn btn-defualt" ng-click="$ctrl.reset()">Abbrechen</button>
+                    <button  type="button" class="btn btn-inverse
+            btn-lg" ng-model="$ctrl.file" ngf-pattern="'image/*'" ngf-accept="'image/*'"capture="camera">
+            <span class="glyphicon glyphicon-camera"></span>
+            Tacke new picture
+        </button>   
+
     </form>
+    <!--</div>-->
 </div>
 
