keine hanung von wo diese aenderungen kommen

--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,8 @@
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
+      <script src="app/createOffering/createOffering.controller.js"></script>
+      <script src="app/createOffering/createOffering.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/offer/create/create.controller.js"></script>
