--- a/client/app/createOffering/createOffering.html
+++ b/client/app/createOffering/createOffering.html
@@ -1,37 +1,37 @@
 <div class= "container">
     <!--<div class="container">-->
-            <img id="imgPreview" alt="uploadetImage" class="thumbnail" ngf-thumbnail="$ctrl.file"/>
-            <!--</div>-->
-        <!--<div class="container">-->
-        <form>
-            <div class="form-group">
-                <label for="title">Title</label>
-                <input type="text" class="form-control" id="title" placeholder="Title" ng-model="$ctrl.offer.name">
-            </div>
-            <div class="form-group">
-                <label for="description">Description</label>
-                <textarea class="form-control" rows="3" ng-model="$ctrl.offer.description"></textarea> 
-            </div>
-            <div class="form-gorup">
-                <label for="offeringOpenDate">Start date:</label>
-                <input type="date" class="form-control" id="startDate" ng-model="$ctrl.offer.startDate">
-            </div>
-            <div class="from-group">
-                <label for="offeringEndDate">End date:</label>
-                <input type="date" class="form-control" id="endDate" ng-model="$ctrl.offer.endDate">
-            </div>
-            <div class="form-group">
-                <label for="offeringPrice">Price</label>
-                <input type="number" class="form-control" id="offeringPrice" step="0.05" placeholder="0.00" ng-model="$ctrl.offer.price">
-            </div>
-            <button type="submit" class="btn btn-default" ng-click="$ctrl.submit()">Angebot erstellen</button>
-            <button type="reset"  class="btn btn-defualt" ng-click="$ctrl.reset()">Abbrechen</button>
-                    <button  type="button" class="btn btn-inverse
-            btn-lg" ng-model="$ctrl.file" ngf-pattern="'image/*'" ngf-accept="'image/*'"capture="camera">
+    <img id="imgPreview" alt="uploadetImage" class="thumbnail" ngf-thumbnail="$ctrl.file"/>
+    <!--</div>-->
+    <!--<div class="container">-->
+    <form>
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" id="title" placeholder="Title" ng-model="$ctrl.offer.name">
+        </div>
+        <div class="form-group">
+            <label for="description">Description</label>
+            <textarea class="form-control" rows="3" ng-model="$ctrl.offer.description"></textarea> 
+        </div>
+        <div class="form-gorup">
+            <label for="offeringOpenDate">Start date:</label>
+            <input type="date" class="form-control" id="startDate" ng-model="$ctrl.offer.startDate">
+        </div>
+        <div class="from-group">
+            <label for="offeringEndDate">End date:</label>
+            <input type="date" class="form-control" id="endDate" ng-model="$ctrl.offer.endDate">
+        </div>
+        <div class="form-group">
+            <label for="offeringPrice">Price</label>
+            <input type="number" class="form-control" id="offeringPrice" step="0.05" placeholder="0.00" ng-model="$ctrl.offer.price">
+        </div>
+        <button type="submit" class="btn btn-default" ng-click="$ctrl.submit()">Angebot erstellen <span class ="glyphicon glyphicon-ok"></span></button>
+        <button type="button" class="btn btn-inverse btn-default"
+            ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file"
+            ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="1MB" capture="camera" >
             <span class="glyphicon glyphicon-camera"></span>
-            Tacke new picture
+            Take new picture
         </button>   
-
+        <button type="reset"  class="btn btn-defualt" ng-click="$ctrl.reset()">Abbrechen<span class ="glyphicon glyphicon-remove"></span></button>
     </form>
     <!--</div>-->
 </div>
