--- a/client/index.html
+++ b/client/index.html
@@ -78,6 +78,8 @@
       <script src="app/app.constant.js"></script>
       <script src="app/createOffering/createOffering.controller.js"></script>
       <script src="app/createOffering/createOffering.js"></script>
+      <script src="app/detailOffer/detailOffer.controller.js"></script>
+      <script src="app/detailOffer/detailOffer.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/offer/create/create.controller.js"></script>
@@ -95,6 +97,8 @@
       <script src="components/navbar/navbar.controller.js"></script>
       <script src="components/navbar/navbar.directive.js"></script>
       <script src="components/util/util.service.js"></script>
+      <script src="packages/Microsoft.ApplicationInsights.JavaScript.0.15.0-build58334/content/scripts/ai.0.15.0-build58334.js"></script>
+      <script src="packages/Microsoft.ApplicationInsights.JavaScript.0.15.0-build58334/content/scripts/ai.0.15.0-build58334.min.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
   </body>
