--- a/client/index.html
+++ b/client/index.html
@@ -98,5 +98,7 @@
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
+    <script src='//maps.googleapis.com/maps/api/js'></script>
+
   </body>
 </html>
