--- a/client/app/createOffering/createOffering.html
+++ b/client/app/createOffering/createOffering.html
@@ -27,7 +27,7 @@
         <button type="submit" class="btn btn-default" ng-click="$ctrl.submit()">Angebot erstellen <span class ="glyphicon glyphicon-ok"></span></button>
         <button type="button" class="btn btn-inverse btn-default"
             ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file"
-            ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="1MB" capture="camera" >
+            ngf-pattern="'image/*'" ngf-accept="'image/*'" capture="camera" >
             <span class="glyphicon glyphicon-camera"></span>
             Take new picture
         </button>   
