edited services to match rest api, added register function for anonymous users, updated example for usage of offer/my route

--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,6 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
+      <h1>Sign up Anonymously</h1>
+    </div>
+    <div class="col-sm-12">
+      <button class="btn btn-inverse btn-lg btn-register" type="button" ng-click="vm.registerAnonymous()">
+        Sign up Anonymously
+      </button>
+    </div>
+    <div class="col-sm-12">
       <h1>Sign up</h1>
     </div>
     <div class="col-sm-12">
