--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3,21 +3,24 @@
 
 </div>
 
-    <div class ="container"> 
-        <ul class="list-group">
-            <li ng-repeat="offer in $ctrl.offers" class="list-group-item offerlist" ng-init="$ctrl.setMarker(offer)" ng-click="$ctrl.showDetailView(offer)"  >
-                <div class="media">
-                    <div class="media-left">
-                        <a href="#"><img class="media-object" src={{offer.picture}}></a>
-                    </div>
-                    <div class="media-body">
-                        <h4 class="media-heading">{{offer.name}}</h4>
-                        <p>{{offer.description}}</p>
-                    </div>
+<div class ="container">
+    <ul class="list-group">
+        <li ng-repeat="offer in $ctrl.offers" class="list-group-item offerlist" ng-init="$ctrl.setMarker(offer)" ng-click="$ctrl.showDetailView(offer)"  >
+            <div class="row">
+                <div class="col-xs-4 col-sm-2 col-md-2">
+                        <img class="img-responsive"  ng-src="{{offer.picture}}" >
                 </div>
-            </li>
-        </ul>
-    </div>
+            <div class="col-xs-8 col-sm-10 col-md-10">
+                <h2>{{offer.name}}</h2>
+                <p>{{offer.description}}</p>
+                <p>preis:{{offer.price}}</p>
+                <p>Erstellt am: {{offer.startDate}}</p>
+                <p>Endet am: {{offer.endDate}}</p>
+            </div>
+            </div>
+        </li>
+    </ul>
+</div>
 <div class = 'cameraButton'>
     <div class="container" id= "capture">
         <div class = 'image-upload'>
