--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,16 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <base href="/">
-    <title></title>
+    <title>geoMarket</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <!--IOS and Androi web clips-->
+    <link rel="apple-touch-icon" href="icons/apple-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="icons/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="58x58" href="icons/apple-icon-58x58.png" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
@@ -97,7 +104,7 @@
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
-    <script src='//maps.googleapis.com/maps/api/js'></script>
+    <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyCZHLa-O44Z6vlGd0STzXp_harNZji1McM'></script>
 
   </body>
 </html>
