- done detailOfferView - done addComment - (in progress) editOffer - (in progress) deleteOffer - (in progress) sellOffer - changes in main.controller - changes in offer.service

--- a/client/index.html
+++ b/client/index.html
@@ -83,8 +83,12 @@
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
+      <script src="app/createComment/createComment.controller.js"></script>
+      <script src="app/createComment/createComment.js"></script>
       <script src="app/createOffering/createOffering.controller.js"></script>
       <script src="app/createOffering/createOffering.js"></script>
+      <script src="app/detailOffer/detailOffer.controller.js"></script>
+      <script src="app/detailOffer/detailOffer.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/offer/create/create.controller.js"></script>
