--- a/client/app/detailOffer/detailOffer.html
+++ b/client/app/detailOffer/detailOffer.html
@@ -1,21 +1,21 @@
-<div class="container" ng-model="$ctrl.offer._id">
+<div class="container" ng-model="$ctrl.offer">
     <div class="row clearfix">
         <div class="col-xs-12 col-sm-4">
             <img ng-src="{{$ctrl.offer.picture}}" alt="{{$ctrl.offer.name}}" title="{{$ctrl.offer.name}}" />
         </div>
-        <div class="col-xs-12 col-md-8">
+        <div class="col-xs-12 col-sm-8">
             <h2>{{$ctrl.offer.name}}</h2>
             <p>{{$ctrl.offer.description}}</p>
         </div>
-        <div class="col-xs-12 col-sm-4 pull-right">
-            <p class="offer-price">
-                {{$ctrl.offer.price}}
-            </p>
+        <div class="col-xs-12">
+            <label for="offeringPrice" class="pull-left">Price</label>
+            <input type="number" class="form-control" id="offeringPrice" step="0.05" placeholder="0.00" ng-model="$ctrl.offer.price" readonly>
         </div>
-        <div class="col-xs-12 col-sm-4 pull-right">
-            <input type="datetime" ng-value="{{$ctrl.offer.endDates}}" readonly />
+        <div class="col-xs-12">
+            <label for="offeringEndDate" class="pull-left">End date</label>
+            <input type="date" class="form-control" ng-model="$ctrl.offer.endDate" readonly />
         </div>
-        <div class="col-xs-12 map" id="map-supply-detail" data-lat="{{$ctrl.offer.loc[0]}}" data-lng="{{$ctrl.offer.loc[1]}}"></div>
+        <div class="col-xs-12 map" id ="map" ng-model="$ctrl.map"></div>
     </div>
     <div class="row comments" ng-repeat="comment in $ctrl.offer.comments">
         <div class="col-xs-12">
@@ -33,7 +33,10 @@
 </div>
 <div class="container">
     <ul class="footer-list">
-        <li class="pull-left"><button type="reset" class="btn btn-default" ng-click="$ctrl.reset()"><span class="glyphicon glyphicon-arrow-left"></span></button></li>
+        <li class="pull-left"><button type="reset" class="btn btn-default" ng-click="$ctrl.goBack()"><span class="glyphicon glyphicon-arrow-left"></span></button></li>
+        <li ng-show="$ctrl.owner" class="pull-right"><button type="button" class="btn btn-default" ng-click="$ctrl.editOffer()"><span class="glyphicon glyphicon-edit"></span></button></li>
+        <li ng-show="$ctrl.owner" class="pull-right"><button type="button" class="btn btn-default" ng-click="$ctrl.deleteOffer()"><span class="glyphicon glyphicon-trash"></span></button></li>
+        <li ng-show="$ctrl.owner" class="pull-right"><button type="button" class="btn btn-default" ng-click="$ctrl.sellOffer()"><span class="glyphicon glyphicon-usd"></span></button></li>
         <li class="pull-right"><button type="submit" class="btn btn-default" ng-click="$ctrl.createComment()"><span class="glyphicon glyphicon-comment"></span></button></li>
     </ul>
 </div>
