--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,30 +1,38 @@
 <div class ="container" >
-<div id ="map" ng-model="$ctrl.map" ></div>
+    <div id ="map" ng-model="$ctrl.map" ></div>
     <ul class="list-group">
         <li ng-repeat="offer in $ctrl.offers" class="list-group-item offerlist" ng-init="$ctrl.setMarker(offer)" >
             <a ng-href="/detailOffer/{{offer._id}}" ui-sref="detailOffer" class = 'offer-link'>
-            <div class="row">
-                <div class="col-xs-4 col-sm-2 col-md-2">
+                <div class="row">
+                    <div class="col-xs-4 col-sm-4 col-md-4">
                         <img class="img-responsive"  ng-src="{{offer.picture}}" >
+                    </div>
+                    <div class="col-xs-8 col-sm-8 col-md-8">
+                        <h4>{{offer.name}}</h4>
+                        <p>preis:{{offer.price}}</p>
+                        <p>{{offer.description}}</p>
+                        <p>Erstellt am: {{offer.startDate.substring(0,10)}} Endet am: {{offer.endDate.substring(0,10)}}</p>
+                    </div>
                 </div>
-            <div class="col-xs-8 col-sm-10 col-md-10">
-                <h4>{{offer.name}}</h4>
-                <p>{{offer.description}}</p>
-                <p>preis:{{offer.price}}</p>
-                <p>Erstellt am: {{offer.startDate}}</p>
-                <p>Endet am: {{offer.endDate}}</p>
-            </div>
-            </div>
             </a>
         </li>
     </ul>
-    
+
 </div>
 <div class = 'cameraButton'>
     <div class="" id= "capture"  >
-        <button id="btn-camera-upload" type="button" class="btn btn-lg btn-block" ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" capture="camera">
+        <button id="btn-camera-upload" type="button" class="btn btn-lg
+        btn-block" ngf-select="$ctrl.uploadPicture($file)"
+                   ng-model="$ctrl.file" ngf-pattern="'image/*'"
+                                         ngf-accept="'image/*'" ngf-max-size="20MB" capture="camera"
+                                                                                    ng-show="$ctrl.isLoggedIn()">
             <span class="glyphicon glyphicon-camera"></span>
             Create an offer
+        </button>
+        <button id="btn-login" class="btn btn-lg btn-block" type="button"
+                                                            ng-hide="$ctrl.isLoggedIn()" ui-serv-active="active" ui-sref="login">
+            <span class="glyphicon glyphicon-log-in"></span>
+            log in before creating an offer
         </button>   
     </div>
 </div>
