--- a/client/index.html
+++ b/client/index.html
@@ -55,20 +55,20 @@
     <![endif]-->
     <!-- build:js({client,node_modules}) app/vendor.js -->
       <!-- bower:js -->
-      <script src="bower_components/jquery/dist/jquery.js"></script>
-      <script src="bower_components/angular/angular.js"></script>
-      <script src="bower_components/angular-resource/angular-resource.js"></script>
-      <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-      <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-      <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-      <script src="bower_components/lodash/lodash.js"></script>
-      <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-      <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
-      <script src="bower_components/ngGeolocation/ngGeolocation.js"></script>
-      <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
-      <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
-      <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
-      <script src="bower_components/angular-recaptcha/release/angular-recaptcha.js"></script>
+      <script src='bower_components/jquery/dist/jquery.js'></script>
+      <script src='bower_components/angular/angular.js'></script>
+      <script src='bower_components/angular-resource/angular-resource.js'></script>
+      <script src='bower_components/angular-cookies/angular-cookies.js'></script>
+      <script src='bower_components/angular-sanitize/angular-sanitize.js'></script>
+      <script src='bower_components/angular-bootstrap/ui-bootstrap-tpls.js'></script>
+      <script src='bower_components/lodash/lodash.js'></script>
+      <script src='bower_components/angular-ui-router/release/angular-ui-router.js'></script>
+      <script src='bower_components/angular-validation-match/dist/angular-validation-match.min.js'></script>
+      <script src='bower_components/ngGeolocation/ngGeolocation.js'></script>
+      <script src='bower_components/ng-file-upload/ng-file-upload.js'></script>
+      <script src='bower_components/angular-simple-logger/dist/angular-simple-logger.js'></script>
+      <script src='bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
+      <script src='bower_components/angular-recaptcha/release/angular-recaptcha.js'></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
@@ -101,11 +101,6 @@
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
-<<<<<<< 78b9bec30eaff34f6502aa68e6ca2414a290924b
     <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyCZHLa-O44Z6vlGd0STzXp_harNZji1McM'></script>
-=======
-    <script src='//maps.googleapis.com/maps/api/js'></script>
->>>>>>> tests und mainview angepst
-
   </body>
 </html>
