--- a/client/index.html
+++ b/client/index.html
@@ -87,11 +87,17 @@
       <script src="app/createComment/createComment.js"></script>
       <script src="app/createOffering/createOffering.controller.js"></script>
       <script src="app/createOffering/createOffering.js"></script>
+      <script src="app/deleteOffer/deleteOffer.controller.js"></script>
+      <script src="app/deleteOffer/deleteOffer.js"></script>
       <script src="app/detailOffer/detailOffer.controller.js"></script>
       <script src="app/detailOffer/detailOffer.js"></script>
+      <script src="app/editOffer/editOffer.controller.js"></script>
+      <script src="app/editOffer/editOffer.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/offer/offer.service.js"></script>
+      <script src="app/sellOffer/sellOffer.controller.js"></script>
+      <script src="app/sellOffer/sellOffer.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
