footer removed, detailOffer responsive picture

--- a/client/app/detailOffer/detailOffer.html
+++ b/client/app/detailOffer/detailOffer.html
@@ -1,7 +1,7 @@
 <div class="container" ng-model="$ctrl.offer">
     <div class="row clearfix">
         <div class="col-xs-12 col-sm-4">
-            <img ng-src="{{$ctrl.offer.picture}}" alt="{{$ctrl.offer.name}}" title="{{$ctrl.offer.name}}" />
+            <img ng-src="{{$ctrl.offer.picture}}" alt="{{$ctrl.offer.name}}" title="{{$ctrl.offer.name}}" class="img-responsive"/>
         </div>
         <div class="col-xs-12 col-sm-8">
             <h2>{{$ctrl.offer.name}}</h2>
