improved detailOffer view, added support for timeago

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,9 +9,9 @@
                     </div>
                     <div class="col-xs-8 col-sm-8 col-md-8">
                         <h4>{{offer.name}}</h4>
-                        <p>preis:{{offer.price}}</p>
+                        <p>Price:{{offer.price}}</p>
                         <p class="hidden-xs hidden-sm">{{offer.description}}</p>
-                        <p>Erstellt am: {{offer.startDate.substring(0,10)}} Endet am: {{offer.endDate.substring(0,10)}}</p>
+                        <p>Ends: <span am-time-ago="offer.endDate"></span></p>
                     </div>
                 </div>
             </a>
