--- a/client/index.html
+++ b/client/index.html
@@ -69,6 +69,8 @@
       <script src='bower_components/angular-simple-logger/dist/angular-simple-logger.js'></script>
       <script src='bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
       <script src='bower_components/angular-recaptcha/release/angular-recaptcha.js'></script>
+      <script src='bower_components/moment/moment.js'></script>
+      <script src='bower_components/angular-moment/angular-moment.js'></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
