--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,9 +9,10 @@
                     </div>
                     <div class="col-xs-8 col-sm-8 col-md-8">
                         <h4>{{offer.name}}</h4>
-                        <p>Price:{{offer.price}}</p>
+                        <p>Price: {{offer.price | currency : 'CHF ' : 2}}</p>
                         <p class="hidden-xs hidden-sm">{{offer.description}}</p>
-                        <p>Ends: <span am-time-ago="offer.endDate"></span></p>
+                        <p><span class="glyphicon glyphicon-time" aria-hidden="true"></span> Ends <span am-time-ago="offer.endDate"></span></p>
+                        <p><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Views: {{offer.views}}</p>
                     </div>
                 </div>
             </a>
