collapse ui-bootstrap for signup page

--- a/client/app/detailOffer/detailOffer.html
+++ b/client/app/detailOffer/detailOffer.html
@@ -40,5 +40,5 @@
             <button ng-show="$ctrl.getCurrentUser()._id === $ctrl.offer._creator" ui-sref="editOffer({id: $ctrl.offer._id})" type="button" class="btn btn-default btn-lg btn-block btn-warning"><span class="glyphicon glyphicon glyphicon-edit" aria-hidden="true"></span> Edit offer</button>
             <button ng-show="$ctrl.getCurrentUser()._id === $ctrl.offer._creator" ng-click="$ctrl.deleteOffer()" type="button" class="btn btn-default btn-lg btn-block btn-danger"><span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span> Delete offer</button>
         </div>
-    </div>$
+    </div>
 </div>
