added myOffers view

--- a/client/index.html
+++ b/client/index.html
@@ -98,6 +98,8 @@
       <script src="app/editOffer/editOffer.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/myOffers/myOffers.controller.js"></script>
+      <script src="app/myOffers/myOffers.js"></script>
       <script src="app/offer/offer.service.js"></script>
       <script src="app/sellOffer/sellOffer.controller.js"></script>
       <script src="app/sellOffer/sellOffer.js"></script>
