--- a/client/app/createOffering/createOffering.html
+++ b/client/app/createOffering/createOffering.html
@@ -25,9 +25,7 @@
             <input type="number" class="form-control" id="offeringPrice" step="0.05" placeholder="0.00" ng-model="$ctrl.offer.price">
         </div>
         <button type="submit" class="btn btn-default" ng-click="$ctrl.submit()">Angebot erstellen <span class ="glyphicon glyphicon-ok"></span></button>
-        <button type="button" class="btn btn-inverse btn-default"
-            ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file"
-            ngf-pattern="'image/*'" ngf-accept="'image/*'" capture="camera" >
+        <button type="button" class="btn btn-inverse btn-default" ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-resize="{width: 420, height: 420, centerCrop:true}" capture="camera">
             <span class="glyphicon glyphicon-camera"></span>
             Take new picture
         </button>   
