--- a/client/app/myOffers/myOffers.html
+++ b/client/app/myOffers/myOffers.html
@@ -1,4 +1,5 @@
 <div class ="container" >
+  <h4>My Offerings</h4>
     <ul class="list-group">
         <li ng-repeat="offer in $ctrl.offers" class="ng-class: $ctrl.status(offer); list-group-item offerlist" ng-init="$ctrl.setMarker(offer)" >
             <a ng-href="/detailOffer/{{offer._id}}" ui-sref="detailOffer({id: offer._id})" class = 'offer-link'>
@@ -17,4 +18,16 @@
             </a>
         </li>
     </ul>
+</div>
+<div class = 'cameraButton'>
+    <div class="" id= "capture"  >
+        <button id="btn-camera-upload" type="button" class="btn btn-l" btn-block" ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-resize="{width: 420, height: 420, centerCrop:true}" capture="camera" ng-show="$ctrl.isLoggedIn()">
+            <span class="glyphicon glyphicon-camera"></span>
+            Create an offer
+        </button>
+        <button id="btn-login" class="btn btn-lg btn-block" type="button" ng-hide="$ctrl.isLoggedIn()" ui-serv-active="active" ui-sref="signup">
+            <span class="glyphicon glyphicon-log-in"></span>
+            log in before creating an offer
+        </button>   
+    </div>
 </div>
