updated detailoffer, editoffer, deleted createComment folder

--- a/client/app/detailOffer/detailOffer.html
+++ b/client/app/detailOffer/detailOffer.html
@@ -29,7 +29,7 @@
                     <div ng-show="$ctrl.isLoggedIn()" class="input-group">
                         <input type="text" class="form-control" placeholder="Your comment..." ng-model="$ctrl.comment">
                         <span class="input-group-btn">
-                            <button class="btn btn-default" type="button" ng-click="$ctrl.addComment()">Submit</button>
+                            <button class="btn btn-primary" type="button" ng-click="$ctrl.addComment()">Submit</button>
                         </span>
                     </div>
                     <span ng-show="!$ctrl.isLoggedIn()">Sign up to comment here.</span>
