--- a/client/app/editOffer/editOffer.html
+++ b/client/app/editOffer/editOffer.html
@@ -1,38 +1,50 @@
 <div class="container">
     <!--<div class="container">-->
-    <img id="imgPreview" alt="uploadetImage" class="thumbnail" ngf-thumbnail="$ctrl.file" />
+    <div class="row">
+        <div class="col-xs-12 col-sm-4">
+            <img id="imgPreview" alt="uploadetImage" class="thumbnail" ngf-thumbnail="$ctrl.file" />
+        </div>
+        <div class="col-xs-12 col-sm-8">
+            <div class="map" id="map" ng-model="$ctrl.map"></div>
+            <button type="button" class="btn btn-default btn-lg btn-block btn-warning" ng-click="$ctrl.updateGeolocation()"><span class="glyphicon glyphicon-pushpin"></span> Take current position as new location</button>
+        </div>
+    </div>
     <!--</div>-->
     <!--<div class="container">-->
-    <form>
-        <div class="form-group">
-            <label for="title">Title</label>
-            <input type="text" class="form-control" id="title" placeholder="Title" ng-model="$ctrl.offer.name">
+    <div class="row">
+        <div class="col-xs-12">
+            <form>
+                <div class="form-group">
+                    <label for="title">Title</label>
+                    <input type="text" class="form-control" id="title" placeholder="Title" ng-model="$ctrl.offer.name">
+                </div>
+                <div class="form-group">
+                    <label for="description">Description</label>
+                    <textarea class="form-control" rows="3" ng-model="$ctrl.offer.description"></textarea>
+                </div>
+                <div class="form-gorup">
+                    <label for="offeringOpenDate">Start date:</label>
+                    <input type="date" class="form-control" id="startDate" ng-model="$ctrl.offer.startDate">
+                </div>
+                <div class="from-group">
+                    <label for="offeringEndDate">End date:</label>
+                    <input type="date" class="form-control" id="endDate" ng-model="$ctrl.offer.endDate">
+                </div>
+                <div class="form-group">
+                    <label for="offeringPrice">Price</label>
+                    <input type="number" class="form-control" id="offeringPrice" step="0.05" placeholder="0.00" ng-model="$ctrl.offer.price">
+                </div>
+                <button type="submit" class="btn btn-default" ng-click="$ctrl.submit()"><span class="glyphicon glyphicon-ok"></span> Change offer</button>
+                <button type="button" class="btn btn-inverse btn-default"
+                        ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file"
+                        ngf-pattern="'image/*'" ngf-accept="'image/*'" capture="camera">
+                    <span class="glyphicon glyphicon-camera"></span>
+                    Take new picture
+                </button>
+                <button type="reset" class="btn btn-default" ng-click="$ctrl.reset()"><span class="glyphicon glyphicon-remove"></span> Quit</button>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="description">Description</label>
-            <textarea class="form-control" rows="3" ng-model="$ctrl.offer.description"></textarea>
-        </div>
-        <div class="form-gorup">
-            <label for="offeringOpenDate">Start date:</label>
-            <input type="date" class="form-control" id="startDate" ng-model="$ctrl.offer.startDate">
-        </div>
-        <div class="from-group">
-            <label for="offeringEndDate">End date:</label>
-            <input type="date" class="form-control" id="endDate" ng-model="$ctrl.offer.endDate">
-        </div>
-        <div class="form-group">
-            <label for="offeringPrice">Price</label>
-            <input type="number" class="form-control" id="offeringPrice" step="0.05" placeholder="0.00" ng-model="$ctrl.offer.price">
-        </div>
-        <button type="submit" class="btn btn-default" ng-click="$ctrl.submit()">Angebot editieren <span class="glyphicon glyphicon-ok"></span></button>
-        <button type="button" class="btn btn-inverse btn-default"
-                ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file"
-                ngf-pattern="'image/*'" ngf-accept="'image/*'" capture="camera">
-            <span class="glyphicon glyphicon-camera"></span>
-            Take new picture
-        </button>
-        <button type="reset" class="btn btn-default" ng-click="$ctrl.reset()">Abbrechen<span class="glyphicon glyphicon-remove"></span></button>
-    </form>
+    </div>
     <!--</div>-->
 </div>
 
