- created sell and delete modal popup - fixed bug in edit offer - changed detailOffer

--- a/client/app/editOffer/editOffer.html
+++ b/client/app/editOffer/editOffer.html
@@ -39,7 +39,7 @@
                     <span class="glyphicon glyphicon-camera"></span>
                     Take new picture
                 </button>
-                <button type="reset" class="btn btn-default" ng-click="$ctrl.reset()"><span class="glyphicon glyphicon-remove"></span> Quit</button>
+                <button type="reset" class="btn btn-default" ui-sref="detailOffer({id: $ctrl.offer._id})"><span class="glyphicon glyphicon-remove"></span> Quit</button>
             </form>
         </div>
     <!--</div>-->
