--- a/client/index.html
+++ b/client/index.html
@@ -90,8 +90,10 @@
       <script src="app/createOffering/createOffering.js"></script>
       <script src="app/detailOffer/detailOffer.controller.js"></script>
       <script src="app/detailOffer/detailOffer.js"></script>
+      <script src="app/editOffer/deleteOffer/deleteOffer.controller.js"></script>
       <script src="app/editOffer/editOffer.controller.js"></script>
       <script src="app/editOffer/editOffer.js"></script>
+      <script src="app/editOffer/sellOffer/sellOffer.controller.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/myOffers/myOffers.controller.js"></script>
