--- a/client/app/editOffer/editOffer.html
+++ b/client/app/editOffer/editOffer.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12 col-sm-4">
             <img ng-show="$ctrl.file" id="imgPreview" alt="uploadetImage" class="thumbnail" ngf-thumbnail="$ctrl.file" />
             <img ng-hide="$ctrl.file" id="imgPreview" alt="uploadetImage" class="thumbnail" ngf-thumbnail="$ctrl.offer.picture" />
-            <button type="button" class="btn btn-inverse btn-default btn-lg btn-block" ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-resize="{width: 420, height: 420, centerCrop:true}" capture="camera">
+            <button type="button" class="btn btn-default btn-lg btn-block" ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-resize="{width: 420, height: 420, centerCrop:true}" capture="camera">
                 <span class="glyphicon glyphicon-camera"></span>
                 Take new picture
             </button>
