--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -11,7 +11,7 @@
           </p>
         </div>
         <div>
-          <button class="btn btn-inverse btn-lg btn-register" type="submit">
+          <button class="btn btn-default btn-lg btn-register" type="submit">
             Sign up Anonymously
           </button>
         </div>
@@ -88,7 +88,7 @@
         </div>
 
         <div>
-          <button class="btn btn-inverse btn-lg btn-register" type="submit">
+          <button class="btn btn-default btn-lg btn-register" type="submit">
             Sign up
           </button>
           <a class="btn btn-default btn-lg btn-login" ui-sref="login">
