--- a/client/app/createOffering/createOffering.html
+++ b/client/app/createOffering/createOffering.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div ng-show="$ctrl.position" class="container">
     <div class="row">
         <div class="col-xs-12">
             <img id="imgPreview" alt="uploadetImage" class="thumbnail" ngf-thumbnail="$ctrl.file" />
-            <button type="button" class="btn btn-inverse btn-default btn-lg btn-block" ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-resize="{width: 420, height: 420, centerCrop:true}" capture="camera">
+            <button type="button" class="btn btn-default btn-lg btn-block" ngf-select="$ctrl.uploadPicture($file)" ng-model="$ctrl.file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-resize="{width: 420, height: 420, centerCrop:true}" capture="camera">
                 <span class="glyphicon glyphicon-camera"></span>
                 Take new picture
             </button>
@@ -48,4 +48,9 @@
         </div>
     </div>
 </div>
-
+<div ng-show="!$ctrl.position" class="container">
+    <div class="jumbotron">
+    <h1>Hello User!</h1>
+    <p>To use our services, please activate the <b>location sharing</b> in your browsers settings.</p>
+    </div>
+</div>
