loading icon added, signup text improved

--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,9 +1,21 @@
 <div class="container">
-    <div class="jumbotron">
     <h1>Signup</h1>
-    <p>To use our services, please sign up with one of the two mehtods.</p>
-    <p><b>Anonymous signup</b> for users who want to be able to make deals quickly with no fear of loosing their data.</p>
-    <p><b>Registered signup</b> for users intending to use this platform seriously on multiple devices whitout loosing their data.</p>
+    <div class="bs-callout bs-callout-info">
+      <h4>Anonymous signup</h4>
+      <p>for users who want to be able to make deals quickly with no fear of loosing their data.</p>
+      <ul>
+        <li>no personal data will be stored</li>
+        <li>no login on other devices</li>
+        <li>user will be deleted after several inactive days</li>
+    </div>
+    <div class="bs-callout bs-callout-info">
+      <h4>Registered signup</h4>
+      <p>for users intending to use this platform seriously on multiple devices whitout loosing their data.</p>
+      <ul>
+        <li>login on other devices</li>
+        <li>re-poste expired offers</li>
+        <li>data stay persistent</li>
+      </ul>
     </div>
     
     <uib-accordion close-others="true">
