--- a/client/index.html
+++ b/client/index.html
@@ -71,6 +71,8 @@
       <script src='bower_components/angular-recaptcha/release/angular-recaptcha.js'></script>
       <script src='bower_components/moment/moment.js'></script>
       <script src='bower_components/angular-moment/angular-moment.js'></script>
+      <script src='bower_components/spin.js/spin.js'></script>
+      <script src='bower_components/angular-spinner/angular-spinner.js'></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
