added loading icon to create offer, bugfix editoffer not showing a map, added loading icon to my offers, bugfix my offers not showing 0 offers the whole time

--- a/client/app/createOffering/createOffering.html
+++ b/client/app/createOffering/createOffering.html
@@ -1,3 +1,4 @@
+<span us-spinner="{opacity: 0.25, color: '#00a6ff'}" spinner-on="$ctrl.showSpinner"></span>
 <div ng-show="$ctrl.position" class="container">
     <div class="row">
         <div class="col-xs-12">
@@ -48,7 +49,7 @@
         </div>
     </div>
 </div>
-<div ng-show="!$ctrl.position" class="container">
+<div ng-show="$ctrl.showInfo" class="container">
     <div class="jumbotron">
     <h1>Hello User!</h1>
     <p>To use our services, please activate the <b>location sharing</b> in your browsers settings.</p>
